@@ -4,9 +4,21 @@ Items are in no particular order.
 
 For 0.4.0:
 
- - finish tutorial/
- - write tests/
- - make all tests succeed
- - FIXMEs in src/Net/Stream.cc
+ - finish tutorial/:
+    * should we use libsocket++ or not? If we build our own, it needs
+      to be standards compliant (sdt can help you with this)
+    * should it be included in the top-level Makefile.am? Or should we
+      just provide a regular Makefile (the latter might make it
+      clearer how to use Atlas-C++) (not building the tutorial may be
+      a good thing... maybe we could build the docs but move the
+      example programs to a subdirectory of tutorial/... oh, what a
+      good idea!)
+ - write tests/:
+    * definitely the biggest task
+ - make all tests succeed:
+    * goes together with the previous
  - update README
- - Maybe: change from MemberFunc() to memberFunc()
+ - try to cut down compile time without affecting the API. Try to
+   minimise #includes and use forward declarations in headers
+   whereever possible (that actually reduces the _need_ to compile)
+   (not sure how compile time itself could be reduced any further)
